# Voice-Inbox

./: .gitignore  .gitlab-ci.yml  Cargo.toml  MODEL_NOTICES.md  README.md  THIRD_PARTY_NOTICES.md  build.rs  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml  android-release.yml  deploy-website.yml
app/: build.gradle.kts
app/src/androidTest/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
fastlane/metadata/android/en-US/: title.txt  (+2 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/VoiceInbox/: ContentView.swift  IosAudioDocumentPicker.swift  IosAudioImportStore.swift  IosAudioPreviewPlayer.swift  IosMainScreenShellState.swift  IosScheduledTranscriptionSettingsStore.swift  IosSharedImportStaging.swift  IosSingleFileTranscriptionController.swift  IosSpeechModelDirectoryPicker.swift  IosSpeechModelStore.swift  SettingsView.swift  VoiceInbox-Bridging-Header.h  VoiceInboxApp.swift
iosApp/VoiceInbox.xcodeproj/: project.pbxproj
iosApp/VoiceInbox/NativeBridge/: VoiceInboxNativeTranscription.h
iosApp/VoiceInboxShareExtension/: Info.plist  ShareViewController.swift  VoiceInboxShareExtension.entitlements
iosApp/VoiceInboxTests/: DeferredSpeechModelLoadingTests.swift
scripts/: build-ios-native.sh
shared/: build.gradle.kts
src/: engine.rs  lib.rs
transcribe-rs/: Cargo.toml
transcribe-rs/src/engines/: mod.rs
website/: astro.config.mjs  package-lock.json  package.json
website/src/layouts/: Layout.astro
website/src/pages/: faq.astro  index.astro  legal.astro  privacy.astro  projects.astro  setup.astro  testing.astro
(+203 files in other folders)
