[package]
name = "notes_recognition"
version = "0.1.0"
edition = "2021"

[lib]
name = "notes_recognition"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
android_logger = "0.13"
transcribe-rs = { path = "transcribe-rs" }
jni = "0.21"
once_cell = "1.19"
serde_json = "1"

ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"] }
