[package]
name = "notes_recognition"
version = "0.1.0"
edition = "2021"

[lib]
name = "notes_recognition"
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
once_cell = "1.19"
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"

[target.'cfg(not(target_os = "ios"))'.dependencies]
transcribe-rs = { path = "transcribe-rs" }
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"] }
